# judix

./: .dockerignore  .gitattributes  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  LICENSE  README.md  Shuttle.toml  render.yaml
.claude/: launch.json
.github/workflows/: ci.yml  docker.yml  keep-warm.yml
crates/judix-cli/: Cargo.toml
crates/judix-cli/src/: main.rs
crates/judix-core/: Cargo.toml
crates/judix-core/src/: cache.rs  deterministic.rs  lib.rs  model.rs  scoring.rs  types.rs
crates/judix-core/tests/: engine_tests.rs
crates/judix-server/: Cargo.toml
crates/judix-server/src/: main.rs
demos/: clean.json  rag_hallucination.json  wrong_tool.json
examples/: agent_live.py  rag_live.py
scripts/: stress.sh
sdk/: README.md  judix.py
web/: index.html
