[workspace]
resolver = "2"
members = ["crates/judix-core", "crates/judix-server", "crates/judix-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Judix"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "native-tls"] }
moka = { version = "0.12", features = ["future"] }
sha2 = "0.10"
jsonschema = "0.20"
futures = "0.3"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 2
