[package]
name = "judix-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
jsonschema = { workspace = true }
# model.rs + cache.rs (Day 1.3 / Day 2) pull these in; kept out of the Day-1
# deterministic build so the hero engine compiles fast with zero heavy deps.
sha2 = { workspace = true, optional = true }
moka = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
async-stream = { version = "0.3", optional = true }

[features]
default = []
model = [
    "dep:sha2",
    "dep:moka",
    "dep:reqwest",
    "dep:futures",
    "dep:tokio",
    "dep:tracing",
    "dep:async-stream",
]

[dev-dependencies]
serde_json = { workspace = true }
