[package]
name = "judix-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "judix-server"
path = "src/main.rs"

[dependencies]
judix-core = { path = "../judix-core", features = ["model"] }
axum = "0.8"
async-stream = "0.3"
futures = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
